--- a/index.html
+++ b/index.html
@@ -131,36 +131,41 @@
                     <div class="block4"></div>
                 </div>
                 <div class="block5">Cу-25</div>
-                <div class="block6">Су-25 впервые поднялся в воздух 22 февраля 1975 года.Самолеты этого типа эксплуатируются с 1981 года.</div>
+                <div class="block6"><div class="div_block_text6">Су-25 впервые поднялся в воздух 22 февраля 1975 года.Самолеты этого типа эксплуатируются с 1981 года.</div></div>
             </div>
         </div>
     </div>
 </div>
-<div class="container">
-<table>
-    <thead>
-        <tr class="line1">
-            <th class="r1">Название</th>
-            <th class="r2">Полное название</th>
-            <th class="r3">Фактический адрес</th>
-            <th class="r4">Городской телефон</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="line2">
-            <td class="r1">Мечта Ленина</td>
-            <td class="r2">Краснознаменный колхоз "Мечта Ленина" им.Держинского</td>
-            <td class="r3"></td>
-            <td class="r4">+7(4822)45-35-27</td>
-        </tr>
-        <tr class="line3">
-            <td class="r1">АЛТ+</td>
-            <td class="r2">ООО "АЛТ ПЛЮС"</td>
-            <td class="r3">Тверская область,Старицкий район,дер.Юрьевское</td>
-            <td class="r4">+7(4822)55-76-27</td>
-        </tr>
-    </tbody>
-</table>
+<div class="table">
+    <div class="container">
+        <div class="table-inner">
+            <h3>Таблицы</h3>
+            <table class="div_table">
+                <thead>
+                    <tr class="line1">
+                        <th class="r1">Название</th>
+                        <th class="r2">Полное название</th>
+                        <th class="r3">Фактический адрес</th>
+                        <th class="r4">Городской телефон</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="line2">
+                        <td class="r1">Мечта Ленина</td>
+                        <td class="r2">Краснознаменный колхоз "Мечта Ленина" им.Держинского</td>
+                        <td class="r3"></td>
+                        <td class="r4">+7(4822)45-35-27</td>
+                    </tr>
+                    <tr class="line3">
+                        <td class="r1">АЛТ+</td>
+                        <td class="r2">ООО "АЛТ ПЛЮС"</td>
+                        <td class="r3">Тверская область,Старицкий район,дер.Юрьевское</td>
+                        <td class="r4">+7(4822)55-76-27</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 </body>
 </html>
