--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div class="container">
             <div class="header-inner">
                 <h3>Заголовки</h3>
-                <div class="string">Вереница вареников</div>
-                <div class="re-education">Переобразование</div>
-                <div class="calculation">Расчет топлива</div>
-                <div class="guidance_tools">СРЕДСТВА НАПАДЕНИЯ</div>
-                <div class="quantity">Количесвто</div>
+                <h1>Вереница вареников</h1>
+                <h2>Переобразование</h2>
+                <h4>Расчет топлива</h4>
+                <h5>СРЕДСТВА НАПАДЕНИЯ</h5>
+                <h5>Количесвто</h5>
             </div>
         </div>
     </div>
@@ -23,12 +23,16 @@
         <div class="container">
             <div class="text-and-writes-inner">
                 <h3>Текст и подписи </h3>
-                <div class="text1">Возврат на Хуари Бумедьен -700км, через 1 час 30 минут,</div>
-                <div class="text2">Су-25 впервые поднялся в воздух 22 февраля 1975 года. Самолеты этого типа эксплуатируются с 1981 года, принимали участие во множестве военных конфликтов и останутся в строю ВВС России как минимум до 2020 года[2].8 октября 2009 года Министерство обороны Российской Федерации объявило о возобновлении закупок штурмовиков этоготипа для ВВС России</div>
-                <div class="text3">Топливо - 19 200 кг / 9600 кг на один самолет</div>
-                <div class="text3">Оплата с помощью банковской карты</div>
+                <p>Возврат на Хуари Бумедьен -700км, через 1 час 30 минут,</p>
+                <p>Су-25 впервые поднялся в воздух 22 февраля 1975 года. Самолеты этого типа<br>
+                эксплуатируются с 1981 года, принимали участие во множестве военных<br>
+                конфликтов и останутся в строю ВВС России как минимум до 2020 года[2].8<br>
+                октября 2009 года Министерство обороны Российской Федерации объявило<br> 
+                о возобновлении закупок штурмовиков этоготипа для ВВС России</p>
+                <p class="grey">Топливо - 19 200 кг / 9600 кг на один самолет</p>
+                <p class="grey">Оплата с помощью банковской карты</p>
                 <div class="_div_qes" title="Су-25 впервые поднялся в воздух 22 февраля">
-                    <div class="text4">?</div>
+                    <div class="qestion">?</div>
                 </div>
             </div>
         </div>
@@ -38,16 +42,16 @@
             <div class="buttons-inner">
                 <h3>Кнопки</h3>
             <div class="div_btn_twice1">
-                <button class="button1 btn">Подробный отчет</button>
-                <button class="button2 btn">Опасный маневр</button>
+                <button class="btn yellow_btn">Подробный отчет</button>
+                <button class="btn red_btn">Опасный маневр</button>
             </div>
             <div class="div_btn_twice2">
-                <button class="button3 btn">Расчет обработанной площади</button>
-                <button class="button4 btn">Отчеты о продвижениях</button>
+                <button class="btn blue_btn">Расчет обработанной площади</button>
+                <button class="btn purple_btn">Отчеты о продвижениях</button>
             </div>
             <div class="div_btn_twice3">
-                <button class="button5 btn">Легенда маршрута</button>
-                <button class="button6 btn">Зарегестрироваться</button>
+                <button class="btn white_btn">Легенда маршрута</button>
+                <button class="btn big_yellow">Зарегестрироваться</button>
             </div>
             </div>
         </div>
@@ -57,21 +61,21 @@
             <div class="links-inner">
                 <h3>Ссылки</h3>
                 <div class="links-column">
-                    <a href="#" class="link blue solid">Транспортные средства </a>
-                    <a href="#" class="link blue dashed">Транспортные средства </a>
-                    <a href="#" class="link blue dotted">Транспортные средства </a>
-                    <a href="#" class="link blue opasity_solid_blue">Транспортные средства </a>
-                    <a href="#" class="link blue opasity_dashed_blue">Транспортные средства </a>
-                    <a href="#" class="link blue opasity_dotted_blue">Транспортные средства </a>
-                    <a href="#" class="link red solid">Транспортные средства </a>
-                    <a href="#" class="link red dashed">Транспортные средства </a>
-                    <a href="#" class="link red dotted">Транспортные средства </a>
-                    <a href="#" class="link red opasity_solid_red">Транспортные средства </a>
-                    <a href="#" class="link grey solid">Транспортные средства </a>
-                    <a href="#" class="link grey opasity_dashed_grey">Транспортные средства </a>
-                    <a href="#" class="link grey opasity_dotted_grey">Транспортные средства </a>
-                    <a href="#" class="link grey opasity_solid_grey">Транспортные средства </a>
-                    <a href="#" class="link grey small opasity_solid">Транспортные средства </a>
+                    <p><a href="#" class="link blue solid">Транспортные средства </a></p>
+                    <p><a href="#" class="link blue dashed">Транспортные средства </a></p>
+                    <p><a href="#" class="link blue dotted">Транспортные средства </a></p>
+                    <p><a href="#" class="link blue opasity_solid_blue">Транспортные средства </a></p>
+                    <p><a href="#" class="link blue opasity_dashed_blue">Транспортные средства </a></p>
+                    <p><a href="#" class="link blue opasity_dotted_blue">Транспортные средства </a></p>
+                    <p><a href="#" class="link red solid">Транспортные средства </a></p>
+                    <p><a href="#" class="link red dashed">Транспортные средства </a></p>
+                    <p><a href="#" class="link red dotted">Транспортные средства </a></p>
+                    <p><a href="#" class="link red opasity_solid_red">Транспортные средства </a></p>
+                    <p><a href="#" class="link grey solid">Транспортные средства </a></p>
+                    <p><a href="#" class="link grey opasity_dashed_grey">Транспортные средства </a></p>
+                    <p><a href="#" class="link grey opasity_dotted_grey">Транспортные средства </a></p>
+                    <p><a href="#" class="link grey opasity_solid_grey">Транспортные средства </a></p>
+                    <p><a href="#" class="link grey small opasity_solid">Транспортные средства </a></p>
                 </div>
             </div>
         </div>
@@ -118,20 +122,22 @@
         <div class="bloks-inner">
             <h3>Блоки</h3>
             <div class="div_bloks">
-                <div class="row1">
+                <div class="row">
                     <div class="block1">
                         <div class="div_block_text">
                             Су-25 впервые поднялся в воздух 22 февраля 1975 года.Самолёты этого типа эксплуатируются с 1981 года, принимали участие во множестве военных конфликтов и останутся в строю ВВС России как минимум до 2020 года
                         </div>
                     </div>
-                    <div class="block2"></div>
+                    <div class="square border_yellow"></div>
                 </div>
-                <div class="row2">
-                    <div class="block3"></div>
-                    <div class="block4"></div>
+                <div class="row">
+                    <div class="square border_grey"></div>
+                    <div class="square background_grey"></div>
                 </div>
-                <div class="block5">Cу-25</div>
-                <div class="block6"><div class="div_block_text6">Су-25 впервые поднялся в воздух 22 февраля 1975 года.Самолеты этого типа эксплуатируются с 1981 года.</div></div>
+                <div class="block5">
+                    <div class="header_block">Cу-25</div>
+                        <div class="div_block_text5">Су-25 впервые поднялся в воздух 22 февраля 1975 года.Самолеты этого типа эксплуатируются с 1981 года.</div>
+                </div>
             </div>
         </div>
     </div>
@@ -140,27 +146,27 @@
     <div class="container">
         <div class="table-inner">
             <h3>Таблицы</h3>
-            <table class="div_table">
+            <table class="styled-table">
                 <thead>
-                    <tr class="line1">
-                        <th class="r1">Название</th>
-                        <th class="r2">Полное название</th>
-                        <th class="r3">Фактический адрес</th>
-                        <th class="r4">Городской телефон</th>
+                    <tr>
+                        <th>Название</th>
+                        <th>Полное название</th>
+                        <th>Фактический адрес</th>
+                        <th>Городской телефон</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="line2">
-                        <td class="r1">Мечта Ленина</td>
-                        <td class="r2">Краснознаменный колхоз "Мечта Ленина" им.Держинского</td>
-                        <td class="r3"></td>
-                        <td class="r4">+7(4822)45-35-27</td>
+                    <tr>
+                        <td>Мечта Ленина</td>
+                        <td>Краснознаменный колхоз "Мечта Ленина" им.Держинского</td>
+                        <td></td>
+                        <td>+7(4822)45-35-27</td>
                     </tr>
-                    <tr class="line3">
-                        <td class="r1">АЛТ+</td>
-                        <td class="r2">ООО "АЛТ ПЛЮС"</td>
-                        <td class="r3">Тверская область,Старицкий район,дер.Юрьевское</td>
-                        <td class="r4">+7(4822)55-76-27</td>
+                    <tr>
+                        <td>АЛТ+</td>
+                        <td>ООО "АЛТ ПЛЮС"</td>
+                        <td>Тверская область,Старицкий район,дер.Юрьевское</td>
+                        <td>+7(4822)55-76-27</td>
                     </tr>
                 </tbody>
             </table>
