--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                     <div class="square background_grey"></div>
                 </div>
                 <div class="block5">
-                    <div class="header_block">Cу-25</div>
-                        <div class="div_block_text5">Су-25 впервые поднялся в воздух 22 февраля 1975 года.Самолеты этого типа эксплуатируются с 1981 года.</div>
+                    <div class="header_block ">Cу-25</div>
+                        <div class="div_block_text border_yellow">Су-25 впервые поднялся в воздух 22 февраля 1975 года.Самолеты этого типа эксплуатируются с 1981 года.</div>
                 </div>
             </div>
         </div>
@@ -160,13 +160,13 @@
                         <td>Мечта Ленина</td>
                         <td>Краснознаменный колхоз "Мечта Ленина" им.Держинского</td>
                         <td></td>
-                        <td>+7(4822)45-35-27</td>
+                        <td class="phone">+7(4822)45-35-27</td>
                     </tr>
                     <tr>
                         <td>АЛТ+</td>
                         <td>ООО "АЛТ ПЛЮС"</td>
                         <td>Тверская область,Старицкий район,дер.Юрьевское</td>
-                        <td>+7(4822)55-76-27</td>
+                        <td class="phone">+7(4822)55-76-27</td>
                     </tr>
                 </tbody>
             </table>
