--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
                                 </div>
                                 <div class="checkbox">
                                     <label for="license-agreement">
-                                        <input type="checkbox" id="license-agreement" required> Пожалуйста, примите лицензионное соглашение
+                                        <input type="checkbox" id="license-agreement" required>
+                                        <span class="checkmark"></span> Пожалуйста, примите лицензионное соглашение
                                     </label>
                                 </div>
                                 <div class="btn_and_writer">
@@ -259,6 +260,5 @@
         </div>
     </div>
 <script src="js/index.js"></script>
-<a href="/test.html">ljl</a>
 </body>
 </html>
