--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@
                             <div class="square background_grey"></div>
                         </div>
                         <div class="block5">
-                            <div class="header_block div_block_text">Cу-25</div>
+                            <div class="header_block">
+                                <div class="text_in_header">
+                                   Су-25
+                                </div>
+                            </div>
                                 <div class="div_block_text border_yellow">Су-25 впервые поднялся в воздух 22 февраля 1975 года.Самолеты этого типа эксплуатируются с 1981 года.</div>
                         </div>
                     </div>
@@ -238,7 +242,16 @@
                                 </div>
                                 <div class="btn_and_writer">
                                     <button type="submit" class="btn big_yellow field-btn" id="submitButton">Отправить</button>
-                                    
+                                    <div class="text_in_ankets">
+                                        <span id="required-fields-msg">Не заполнены обязательные поля:</span>
+                                        <label for="name" id="name-required">Имя</label>
+                                        <label for="surname" id="surname-required">Фамилия</label>
+                                        <label for="patronymic" id="patronymic-required">Отчество</label>
+                                        <label for="email" id="email-required">E-mail</label>
+                                        <label for="password" id="password-required">Пароль</label>
+                                        <label for="confirm-password" id="confirm-password-required">Подтверждение пароля</label>
+                                        <label for="phone" id="phone-required">Телефон</label>
+                                    </div>
                                 </div>
                             </div>
                         </form>
