--- a/index.html
+++ b/index.html
@@ -200,43 +200,42 @@
                 <h3 id="ankets">Правильная анкета</h3>
                 <div class="div_ankets">
                     <div class="ankets-inner">
-                        <form id="myForm">
+                        <form id="form">
                             <div class="form-inputs">
                                 <div class="form-input">
                                     <label for="name">Имя</label>
-                                    <div class="qq">
-                                        <input type="text" id="name" class="placeholder" placeholder="Имя" required>
-                                        <p class="errorMessage"></p></div>
+                                    <input type="text" id="name" class="placeholder" placeholder="Имя" required>
+                                    <span class="error-message">Пожалуйста, введите имя</span>
                                 </div>
                                 <div class="form-input">
                                     <label for="surname">Фамилия</label>
                                     <input type="text" id="surname" class="placeholder" placeholder="Фамилия" required>
-                                    <span class="error-message"></span>
+                                    <span class="error-message">Пожалуйста, введите фамилию</span>
                                 </div>
                                 <div class="form-input">
                                     <label for="patronymic">Отчество</label>
                                     <input type="text" id="patronymic" class="placeholder" placeholder="Отчество" required>
-                                    <p id="errorMessage"></p>
+                                    <span class="error-message">Пожалуйста, введите отчество</span>
                                 </div>
                                 <div class="form-input">
                                     <label for="email">Email</label>
                                     <input type="email" id="email" class="placeholder" placeholder="Email" required>
-                                    <p id="errorMessage"></p>
+                                    <span class="error-message">Пожалуйста, введите E-mail</span>
                                 </div>
                                 <div class="form-input">
                                     <label for="password">Пароль</label>
                                     <input type="password" id="password" class="placeholder" placeholder="Пароль" required>
-                                    <p id="errorMessage"></p>
+                                    <span class="error-message">Пожалуйста, введите пароль</span>
                                 </div>
                                 <div class="form-input">
                                     <label for="confirm-password">Подтвердите пароль</label>
                                     <input type="password" id="confirm-password" class="placeholder" placeholder="Подтвердите пароль" required>
-                                    <p id="errorMessage"></p>
+                                    <span class="error-message">Пожалуйста, повторите пароль </span>
                                 </div>
                                 <div class="form-input">
                                     <label for="phone">Телефон</label>
                                     <input type="tel" id="phone" class="placeholder" placeholder="Телефон" required>
-                                    <p id="errorMessage"></p>
+                                    <span class="error-message">Пожалуйста, введите номер телефона</span>
                                 </div>
                                 <div class="form-input comment">
                                     <label for="comment">Комментарий</label>
