--- a/index.html
+++ b/index.html
@@ -251,14 +251,15 @@
                                     <button type="submit" class="btn big_yellow field-btn" id="submitButton">Отправить</button>
                                     <div class="text_in_ankets">
                                         <span id="required-fields-msg">Не заполнены обязательные поля:</span>
-                                        <label for="name" id="name-required">Имя</label>
-                                        <label for="surname" id="surname-required">Фамилия</label>
-                                        <label for="patronymic" id="patronymic-required">Отчество</label>
-                                        <label for="email" id="email-required">E-mail</label>
-                                        <label for="password" id="password-required">Пароль</label>
-                                        <label for="confirm-password" id="confirm-password-required">Подтверждение пароля</label>
-                                        <label for="phone" id="phone-required">Телефон</label>
+                                        <label for="name" id="name-required"><span>Имя</span></label>
+                                        <label for="surname" id="surname-required"><span>Фамилия</span></label>
+                                        <label for="patronymic" id="patronymic-required"><span>Отчество</span></label>
+                                        <label for="email" id="email-required"><span>E-mail</span></label>
+                                        <label for="password" id="password-required"><span>Пароль</span></label>
+                                        <label for="confirm-password" id="confirm-password-required"><span>Подтверждение пароля</span></label>
+                                        <label for="phone" id="phone-required"><span>Телефон</span></label>
                                     </div>
+                                    
                                 </div>
                             </div>
                         </form>
