--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                 </div>
                                 <div class="form-input">
                                     <label for="phone">Телефон</label>
-                                    <input type="tel" id="phone" class="placeholder" placeholder="Телефон" required>
+                                    <input type="tel" id="phone" class="placeholder" placeholder="+_(____)__-__-__" required>
                                     <span class="error-message">Пожалуйста, введите номер телефона</span>
                                 </div>
                                 <div class="form-input comment">
