fixPIcture/js/fonts

--- a/src/blocks/input.html
+++ b/src/blocks/input.html
@@ -22,7 +22,7 @@
                     <div class="sd-container">
                     <input class="sd" type="date" name="selected_date" />
                     <span class="open-button">
-                    <button type="button"><img src="/dist/img/calendar.png" alt=""></button>
+                    <button type="button"><img src="/img/cal2.svg" alt=""></button>
                     </span>
                     </div>
                     </form>
